PR/49091: xhci: wrong wMaxPacketSize value

While this is correct according to the specification only fixed sizes
are allowed, i.e. 512 for SS, etc. Maybe these should be used?